
    FFmpeg/libavcodec:
    * Intel Music coder audio decoder
    * Fraps v2/v4 video decoder
    * H.264 decoding speedup
    * Native NUT demuxer updated to spec
    * NUT muxing and demuxing support via libnut

    Filters:
    * obsolete fame filter removed
    * vf_geq speed-ups

    Ports:
    * further Intel Mac fixes

    Others:
    * libdvdcss updated to Subversion HEAD, now same as upstream version
    * libmpdvdkit split into libdvdread and libdvdcss
    * obsolete Xvid 3 support removed
    * long-deprecated -vop option removed
    * video stream switching
    * dvdnav:// honour -alang and -slang
    * mencoder now can write to output streams; file:// and smb:// are the only stream
      currently supported


  rc1: "Codename intentionally left blank" October 22, 2006
  (SVN revisions: MPlayer r20372, FFmpeg r6767)

    DOCS:
    * German documentation translation finished
    * Russian documentation translation synced and almost finished

    Drivers:
    * IVTV hardware MPEG audio/video decoder output
    * ALSA audio output: AC3 passthrough now works even when the device name
      of the digital output port has been set by the user
    * bicubic OpenGL scaling works with ATI cards
    * md5sum switched to the libavutil MD5 implementation
    * support for libcaca 1.0 via compatibility layer

    Decoders:
    * liba52 updated to 0.7.4 (slightly faster)
    * SSE optimizations for mp3lib
    * removed support for obsolete and non-free divx4 libraries

    Demuxers:
    * audio stream switching in MPEG-TS/PS, Matroska and
      streams supported by libavformat
    * audio stream switching between streams with different codecs
    * libavformat demuxer now honors -alang
    * chapter seeking in Matroska files
    * fixed seeking to absolute and percent position for libavformat demuxer
    * NUT demuxer using libnut
    * Matroska SimpleBlock support

    Inputs:
    * split of stream layer from libmpdemux to new stream library